--- a/public/views/layouts/main.hbs
+++ b/public/views/layouts/main.hbs
@@ -57,6 +57,8 @@
     <script type="text/javascript" src="scripts/bootstrap.min.js?ver=1.1.0"></script>
     <script type="text/javascript" src="scripts/wow.min.js?ver=1.1.0"></script>
     <script type="text/javascript" src="scripts/mdb.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="scripts/jquery.flip.min.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
     <script>new WOW().init();</script>
   </body>
 </html>
