Separate tutorial from others by a forced row change The connect phone card is having some weird glitch from flip.js which makes it 30px too wide, this will hide that for now

--- a/public/views/dashboard.hbs
+++ b/public/views/dashboard.hbs
@@ -73,6 +73,9 @@
           </div>
         {{/if}}
       {{/each}}
+
+      </div>
+      <div class="row wow zoomIn">
       
       <div class="col-lg-4 col-md-12 mb-5 tutorial">
         <div class="card card-image">
