chore: changed the plant tree box CTA to coming soon

--- a/public/views/dashboard.hbs
+++ b/public/views/dashboard.hbs
@@ -104,7 +104,7 @@
             <div class="card-body">
               <div class="py-5"><h4>Plant a physical tree</h4></div>
               <div class="py-3"><span class="display-4">100 🌎</span></div>
-              <a class="btn btn-outline-white disabled mt-5">Not enough points</a>
+              <a class="btn btn-outline-white disabled mt-5">Coming soon</a>
             </div>
           </div>
         </div>
