--- a/public/views/dashboard.hbs
+++ b/public/views/dashboard.hbs
@@ -92,7 +92,7 @@
   </div>
 </section>
 
-<section class="text-center py-5" id="pricing">
+<section class="text-center py-5" id="pricing" style="display: none;">
   <div class="container">
     <div class="wow fadeIn">
       <h2 class="h1 pt-5 pb-3">Spend points:</h2>
