--- a/public/mail-templates/partials/footer.hbs
+++ b/public/mail-templates/partials/footer.hbs
@@ -522,7 +522,7 @@
                                                   href="https://www.consciousplanet.org/privacy-policy">Privacy</a></u>
                                               | <u><a target="_blank"
                                                   style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#ffffff;font-size:12px;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif"
-                                                  href="mailto:volunteers.uk@consciousplanet.org">Unsubscribe</a></u></p>
+                                                  href="{{unsubscribeUrl}}">Unsubscribe</a></u></p>
                                           </td>
                                         </tr>
                                         <!--[if !mso]><!-- -->
