feat: add unsubscribe reason to the form

--- a/public/views/unsubscribe.hbs
+++ b/public/views/unsubscribe.hbs
@@ -17,6 +17,8 @@
             </label>
         {{/each}}
 
+        <textarea name="reason" placeholder="What would we had done differently in order not for you to unsubscribe?">{{#if reason}}{{reason}}{{/if}}</textarea>
+
         <button type="submit" class="btn btn-primary">Update</button>
 
     </form>
