fix: cosmatic corrections and remove welcome message template from the unsubscription list.

--- a/public/views/unsubscribe.hbs
+++ b/public/views/unsubscribe.hbs
@@ -17,7 +17,7 @@
             </label>
         {{/each}}
 
-        <textarea name="reason" placeholder="What would we had done differently in order not for you to unsubscribe?">{{#if reason}}{{reason}}{{/if}}</textarea>
+        <textarea name="reason" placeholder="Please share your reason for unsubscribing. It will be a big support to offer a better experience to every one.">{{#if reason}}{{reason}}{{/if}}</textarea>
 
         <button type="submit" class="btn btn-primary">Update</button>
 
