--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -375,7 +375,10 @@
                                       href="https://www.consciousplanet.org/terms-and-conditions/">Terms</a></u> | <u><a
                                       target="_blank"
                                       style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#ffffff;font-size:14px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif"
-                                      href="http://consciousplanet.org/privacy-policy/">Privacy</a></u>&nbsp;&nbsp;</p>
+                                      href="http://consciousplanet.org/privacy-policy/">Privacy</a></u>  | <u><a
+                                      target="_blank"
+                                      style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#ffffff;font-size:14px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif"
+                                      href="/unsubscribe/{{user.userid}}">Manage Subscriptions</a></u>&nbsp;&nbsp;</p>
                               </td>
                             </tr>
                             <!--[if !mso]><!-- -->
