--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -17,27 +17,24 @@
               <table class="es-content-body" align="center" cellpadding="0" cellspacing="0"
                 style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;background-repeat:no-repeat;width:800px;background-image:url({{baseUrl}}/img/bgrd_dbrd_R9h.png);background-position:center center"
                 background="{{baseUrl}}/img/bgrd_dbrd_R9h.png" bgcolor="#FFFFFF">
-                <tr>
-                  <td align="left" style="padding:0;Margin:0">
-                    <table cellpadding="0" cellspacing="0" width="100%"
-                      style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                      <tr>
-                        <td align="center" valign="top" style="padding:0;Margin:0;width:800px">
-                          <table cellpadding="0" cellspacing="0" width="100%"
-                            style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                            <tr>
-                              <td align="center" style="padding:0;Margin:0;font-size:0px"><a target="_blank"
-                                  href="{{baseUrl}}"
-                                  style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#1376C8;font-size:14px"><img
-                                    class="adapt-img" src="{{baseUrl}}/img/header2_o3Z.png" alt
-                                    style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"
-                                    width="800" height="409"></a></td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
+                <tr class="es-mobile-hidden"> 
+                  <td align="left" style="padding:0;Margin:0"> 
+                  <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px"> 
+                    <tbody><tr> 
+                      <td align="center" valign="top" style="padding:0;Margin:0;width:800px"> 
+                      <table cellpadding="0" cellspacing="0" width="100%" background="{{baseUrl}}/img/header2_o3Z.png" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-image:url({{baseUrl}}/img/header2_o3Z.png);background-repeat:no-repeat;background-position:center top"> 
+                        <tbody><tr> 
+                          <td align="center" height="115" style="padding:0;Margin:0"></td> 
+                        </tr> 
+                        <tr> 
+                          <td align="right" style="padding:0;Margin:0;padding-left:20px;padding-right:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#ffffff;font-size:16px">Welcome {{ user.firstName }}<br><br><a href="{{baseUrl}}/logout" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#ffffff;font-size:16px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif" href="">Logout</a></p></td> 
+                        </tr> 
+                        <tr> 
+                          <td align="center" height="228" style="padding:0;Margin:0"></td> 
+                        </tr> 
+                      </tbody></table></td> 
+                    </tr> 
+                  </tbody></table></td> 
                 </tr>
                 <tr>
                   <td align="left" style="padding:0;Margin:0;padding-top:20px;padding-left:20px;padding-right:20px">
