--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -180,8 +180,7 @@
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
                                   <br>If you connect your accounts, every time you like/ post something with hashtag
-                                  <strong>#SaveSoil </strong>you will receive Earth points.<br><br>The team will also
-                                  award you special Save Soil badges when you reach certain points.</p>
+                                  <strong>#SaveSoil </strong>you will receive Earth points.<br><br>When you reach certain points, you will be awarded an Earth Badge.</p>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'merriweather sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:21px;color:#333333;font-size:14px;display:none">
                                   <br></p>
