--- a/public/views/ep-dashboard-login.hbs
+++ b/public/views/ep-dashboard-login.hbs
@@ -55,14 +55,14 @@
                                 style="padding:0;Margin:0;padding-top:10px;padding-left:20px;padding-right:30px">
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  As an Earth Buddy, every little action you take, be it a post or a tweet, liking or
+                                  <strong>As an Earth Buddy</strong>, every little action you take, be it a post or a tweet, liking or
                                   sharing content on social media, or offline activities at the institutional or
                                   organizational level for soil awareness goes a long way in spreading the word.
                                 </p>
                                 <br>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  Earth points are a fun way to acknowledge your efforts towards amplifying the save
+                                  <strong>Earth Points</strong> are a fun way to acknowledge your efforts towards amplifying the save
                                   soil movement through social media.
                                 </p>
                                 <br />
