--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -17,20 +17,20 @@
               <table class="es-content-body" align="center" cellpadding="0" cellspacing="0"
                 style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;background-repeat:no-repeat;width:800px;background-image:url({{baseUrl}}/img/bgrd_dbrd_R9h.png);background-position:center center"
                 background="{{baseUrl}}/img/bgrd_dbrd_R9h.png" bgcolor="#FFFFFF">
-                <tr class="es-mobile-hidden"> 
+                <tr> 
                   <td align="left" style="padding:0;Margin:0"> 
                   <table cellpadding="0" cellspacing="0" width="100%" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px"> 
                     <tbody><tr> 
                       <td align="center" valign="top" style="padding:0;Margin:0;width:800px"> 
-                      <table cellpadding="0" cellspacing="0" width="100%" background="{{baseUrl}}/img/header2_o3Z.png" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-image:url({{baseUrl}}/img/header2_o3Z.png);background-repeat:no-repeat;background-position:center top"> 
+                      <table cellpadding="0" cellspacing="0" width="100%" class="es-bsize-contain" style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-image:url({{baseUrl}}/img/header2_o3Z.png);background-repeat:no-repeat;background-position:center top"> 
                         <tbody><tr> 
-                          <td align="center" height="115" style="padding:0;Margin:0"></td> 
+                          <td align="center" style="padding:0;Margin:0;height:115px;" class="es-h-50"></td> 
                         </tr> 
                         <tr> 
                           <td align="right" style="padding:0;Margin:0;padding-left:20px;padding-right:20px"><p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#ffffff;font-size:16px">Welcome {{ user.firstName }}<br><br><a href="{{baseUrl}}/logout" style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#ffffff;font-size:16px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif" href="">Logout</a></p></td> 
                         </tr> 
                         <tr> 
-                          <td align="center" height="228" style="padding:0;Margin:0"></td> 
+                          <td align="center" style="padding:0;Margin:0;height:228px;" class="es-h-100"></td> 
                         </tr> 
                       </tbody></table></td> 
                     </tr> 
@@ -151,8 +151,8 @@
                                   class="es-button-border"
                                   style="border-style:solid;border-color:#2CB543;background:#74b644;border-width:0px 0px 2px 0px;display:inline-block;border-radius:6px;width:auto;border-bottom-width:0px"><a
                                     href="#" id="view-all-point-events" class="es-button"
-                                    style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#FFFFFF;font-size:18px;border-style:solid;border-color:#74b644;border-width:10px 20px 10px 20px;display:inline-block;background:#74b644;border-radius:6px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center">View
-                                    all</a></span></td>
+                                    style="mso-style-priority:100 !important;text-decoration:none;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;color:#FFFFFF;font-size:18px;border-style:solid;border-color:#74b644;border-width:10px 20px 10px 20px;display:inline-block;background:#74b644;border-radius:6px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;font-weight:normal;font-style:normal;line-height:22px;width:auto;text-align:center">Show
+                                    more</a></span></td>
                             </tr>
                           </table>
                         </td>
@@ -321,7 +321,6 @@
                                           height="32"
                                           style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a>
                                     </td>
-                                    </tbody>
                                     <td align="center" valign="top" style="padding:0;Margin:0"><a target="_blank"
                                         href="https://consciousplanet.org"
                                         style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#1376C8;font-size:11px"><img
@@ -329,6 +328,7 @@
                                           height="32"
                                           style="display:block;border:0;outline:none;text-decoration:none;-ms-interpolation-mode:bicubic"></a>
                                     </td>
+                                    </tbody>
                                   </tr>
                                 </table>
                               </td>
