--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -15,7 +15,7 @@
           <tr>
             <td align="center" bgcolor="#ffffff" style="padding:0;Margin:0;background-color:#ffffff">
               <table class="es-content-body" align="center" cellpadding="0" cellspacing="0"
-                style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;background-repeat:no-repeat;width:800px;background-image:url({{baseUrl}}/img/bgrd_dbrd_R9h.png);background-position:center center"
+                style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;background-color:transparent;background-repeat:repeat-y;width:800px;background-image:url({{baseUrl}}/img/bgrd_dbrd_R9h.png);background-position:center center"
                 background="{{baseUrl}}/img/bgrd_dbrd_R9h.png" bgcolor="#FFFFFF">
                 <tr>
                   <td style="text-align: right;padding-right: 5px;">
