feat: ui content update

--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -44,9 +44,9 @@
                               <td align="center" style="padding:30px;Margin:0">
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">
-                                  Of all the damage we have caused to the planet, soil extinction is the gravest. May we
-                                  be the generation who had the foresight &amp; responsibility to SaveSoil. Now is the
-                                  time to voice our commitment. Let’s make it happen.–&nbsp;<strong>Sadhguru</strong>
+                                  Welcome!<br>
+                                  You’ve earned…
+
                                 </p>
                               </td>
                             </tr>
@@ -75,7 +75,7 @@
                               <td align="center" class="es-m-txt-c es-m-p25t" style="padding:10px;Margin:0">
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:32px;color:#09019f;font-size:16px">
-                                  Share your score on:</p>
+                                  Share it now!</p>
                               </td>
                             </tr>
                             <tr>
@@ -161,6 +161,7 @@
                 <tr>
                   <td class="es-m-p20" align="left" style="padding:30px;Margin:0">
                     <!--[if mso]><table style="width:740px" cellpadding="0" cellspacing="0"><tr><td style="width:428px" valign="top"><![endif]-->
+                    {{#if haveUnconnectedPlatforms}}
                     <table cellpadding="0" cellspacing="0" class="es-left" align="left"
                       style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:left">
                       <tr>
@@ -175,8 +176,8 @@
                                   <strong>Earth Points</strong></h1>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  <br>If you connect your accounts, every time you like/ post something with hashtag
-                                  <strong>#SaveSoil </strong>you will receive Earth points.<br><br>When you reach certain points, you will be awarded an Earth Badge.</p>
+                                  <br>
+                                  Connect your other social media accounts to earn more points. Don't forget to use the hashtag <strong>#savesoil</strong>. </p>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'merriweather sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:21px;color:#333333;font-size:14px;display:none">
                                   <br></p>
@@ -187,7 +188,6 @@
                       </tr>
                     </table>
                     <!--[if mso]></td><td style="width:20px"></td><td style="width:292px" valign="top"><![endif]-->
-                    {{#if haveUnconnectedPlatforms}}
                     <table cellpadding="0" cellspacing="0" class="es-right" align="right"
                       style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px;float:right">
                       <tr>
@@ -231,7 +231,7 @@
                                 style="Margin:0;padding-top:10px;padding-bottom:10px;padding-left:30px;padding-right:30px">
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:21px;color:#ffffff;font-size:14px">
-                                  We never post anything on connected platforms.</p>
+                                  Rest assured we do not post anything on connected platforms.</p>
                               </td>
                             </tr>
                           </table>
