--- a/public/views/ep-dashboard-login.hbs
+++ b/public/views/ep-dashboard-login.hbs
@@ -55,44 +55,22 @@
                                 style="padding:0;Margin:0;padding-top:10px;padding-left:20px;padding-right:30px">
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  <strong>As an Earth Buddy</strong>, every little action you take, be it a post or a tweet, liking or
-                                  sharing content on social media, or offline activities at the institutional or
-                                  organizational level for soil awareness goes a long way in spreading the word.
+                                  <strong>Earth points</strong> acknowledge your commitment to inspire people to stand up to Save Soil
                                 </p>
                                 <br>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  <strong>Earth Points</strong> are a fun way to acknowledge your efforts towards amplifying the save
-                                  soil movement through social media.
-                                </p>
-                                <br />
-                                <p
-                                  style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  Ways to earn  
+                                  Connect your social media accounts to earn points, and get earth badges. It's simple! All you need to do is use the hashtag <strong>#savesoil</strong> each time you: 
+                                  <br><br>
                                 <ul 
                                 style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  <li>Login and connect your social media accounts</li>
-                                  <li>Follow the Conscious Planet page on Instagram, Facebook, and Twitter</li>
-                                  <li>Like, share, re-share, and tweet content on your social media pages</li>
-                                  <li>Invite someone to register as an Earth Buddy</li>
-                                  <li>Complete the activity of the day</li>
+                                  <li>Tweet, Quote Tweet and Re-Tweet on Twitter</li>
+                                  <li>Post and Share on Facebook and Instagram.</li>
                                 </ul>
                                 </p>
                                 <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  When you earn specific Earth points you get Earth Badges which you can share with
-                                  others to inspire them.
-                                </p>
-                                <br />
-                                <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  What we do together for soil awareness these 100 days till the 21st of June, will
-                                  ensure a happy, and nutritious future for everyone.  
-                                </p>
-                                <br />
-                                <p style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  You can log in now and connect your social media accounts to join the journey to save
-                                  soil while earning earth points for every action you take. Once logged in, you get
-                                  access to a personal dashboard showing the Earth points earned. Rest assured we don’t
-                                  post anything on connected platforms. 
+                                  <br>
+                                  Let's come together and save our world’s soil from extinction and make a difference in the well-being of our planet.                                
                                 </p>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'merriweather sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:21px;color:#333333;font-size:14px;display:none">
@@ -111,8 +89,17 @@
                         <td align="left" style="padding:0;Margin:0;width:292px">
                           <table cellpadding="0" cellspacing="0" width="100%"
                             style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
-                            <tr class="es-mobile-hidden">
-                              <td align="center" height="132" style="padding:0;Margin:0"></td>
+                            <tr>
+                              <td align="left" class="es-m-p20l"
+                                style="padding:0;Margin:0;padding-top:10px;padding-left:10px;padding-right:30px">
+                                <p
+                                  style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:36px;color:#333333;font-size:24px;text-align:left">
+                                  Login to your account</p>
+                                <p
+                                  style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">
+                                  Connect now to earn points.
+                                </p>
+                              </td>
                             </tr>
                             <tr>
                               <td align="left" class="es-m-p20l" style="padding:0;Margin:0;font-size:0px"><a
@@ -142,9 +129,6 @@
                                       style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#588934;font-size:16px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif"
                                       href="http://consciousplanet.org/privacy-policy/">Privacy Policy</a></strong>.</p>
                               </td>
-                            </tr>
-                            <tr class="es-mobile-hidden">
-                              <td align="center" height="132" style="padding:0;Margin:0"></td>
                             </tr>
                           </table>
                         </td>
@@ -190,21 +174,17 @@
                               <td align="left" style="padding:0;Margin:0;padding-left:20px;padding-right:20px">
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:36px;color:#333333;font-size:24px;text-align:left">
-                                  About</p>
+                                  Save Soil</p>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
                                   <br>
                                 </p>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
-                                  Conscious Planet is an effort to raise human consciousness and bring a sense of
-                                  inclusiveness such that multifarious activities of our societies move into a conscious
-                                  mode. An effort to align human activity to be supportive of nature and all life on our
-                                  planet. Our work is towards creating a planet where a large number of Human Beings act
-                                  consciously, governments are elected consciously, where ecological issues become
-                                  election issues in the world. <strong><a target="_blank"
+                                  A global movement to address the soil crisis by bringing together people from around the world to stand up for Soil Health, and supporting leaders of all nations to institute national policies and actions toward increasing the organic content in cultivable Soil.
+                                  <strong><a target="_blank"
                                       style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:underline;color:#588934;font-size:16px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;text-align:left"
-                                      href="https://consciousplanet.org//about-us">Find out more</a></strong></p>
+                                      href="https://consciousplanet.org/about-us">Know more about SaveSoil</a></strong></p>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'merriweather sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:21px;color:#333333;font-size:14px;display:none">
                                   <br>
