--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -118,7 +118,7 @@
                                 style="padding:0;Margin:0;padding-top:10px;padding-bottom:10px;padding-right:10px">
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:30px;color:#333333;font-size:20px">
-                                  <strong>Points breakdown</strong></p>
+                                  <strong>Points breakdown</strong> <span style="font-size: 10px;">({{#if timezone}}{{timezone}}{{else}}UTC{{/if}})</span> </p>
                               </td>
                             </tr>
                             <tr>
