fix: headers in landing

--- a/public/views/ep-dashboard-login.hbs
+++ b/public/views/ep-dashboard-login.hbs
@@ -92,9 +92,9 @@
                             <tr>
                               <td align="left" class="es-m-p20l"
                                 style="padding:0;Margin:0;padding-top:10px;padding-left:10px;padding-right:30px">
-                                <p
+                                <h3
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:36px;color:#333333;font-size:24px;text-align:left">
-                                  Login to your account</p>
+                                  Login to your account</h3>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px">
                                   Connect now to earn points.
@@ -172,9 +172,9 @@
                             style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                             <tr>
                               <td align="left" style="padding:0;Margin:0;padding-left:20px;padding-right:20px">
-                                <p
+                                <h3
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:36px;color:#333333;font-size:24px;text-align:left">
-                                  Save Soil</p>
+                                  Save Soil</h3>
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif;line-height:24px;color:#333333;font-size:16px;text-align:left">
                                   <br>
