--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -267,7 +267,7 @@
                                 style="padding:0;Margin:0;padding-bottom:5px;padding-top:10px;padding-left:30px">
                                 <p
                                   style="Margin:0;-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;font-family:'open sans', 'helvetica neue', helvetica, arial, sans-serif;line-height:21px;color:#ffffff;font-size:14px">
-                                  <strong>&nbsp;Connect with us</strong></p>
+                                  <strong>&nbsp;Follow us</strong></p>
                               </td>
                             </tr>
                           </table>
