--- a/public/views/layouts/main.hbs
+++ b/public/views/layouts/main.hbs
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Earth Points Dashboard</title><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
-    <link href="css/mdb.min.css?ver=1.1.0" rel="stylesheet">
-    <link href="css/main.css?ver=1.1.0" rel="stylesheet">
+    {{#if customCss}}
+      {{#each customCss}}
+        <link href="{{baseUrl}}/css/{{this}}" rel="stylesheet">
+      {{/each}}
+    {{else}}
+      <link href="{{baseUrl}}/css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
+      <link href="{{baseUrl}}/css/mdb.min.css?ver=1.1.0" rel="stylesheet">
+      <link href="{{baseUrl}}/css/main.css?ver=1.1.0" rel="stylesheet">
+    {{/if}}
     {{#if gtag}}
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-0E2LXQSQCZ"></script>
@@ -52,11 +58,15 @@
         </div>
       </div>
     </footer>
-    <script type="text/javascript" src="scripts/jquery.min.js?ver=1.1.0"></script>
-    <script type="text/javascript" src="scripts/popper.min.js?ver=1.1.0"></script>
-    <script type="text/javascript" src="scripts/bootstrap.min.js?ver=1.1.0"></script>
-    <script type="text/javascript" src="scripts/wow.min.js?ver=1.1.0"></script>
-    <script type="text/javascript" src="scripts/mdb.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="{{baseUrl}}/scripts/jquery.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="{{baseUrl}}/scripts/popper.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="{{baseUrl}}/scripts/bootstrap.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="{{baseUrl}}/scripts/wow.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="{{baseUrl}}/scripts/mdb.min.js?ver=1.1.0"></script>
     <script>new WOW().init();</script>
+    {{#if customScript}}<script type="text/javascript">{{{customScript}}}</script>{{/if}}
+    {{#each customScripts}}
+      <script type="text/javascript" src="{{baseUrl}}/scripts/{{this}}"></script>
+    {{/each}}
   </body>
 </html>
