--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -2,6 +2,10 @@
   font-family: "Roboto", sans-serif;
 }
 
+#history-settings {
+  display: none;
+}
+
 .body {
   background: #fff;
   padding: 40px;
