--- a/public/views/edit-rules.hbs
+++ b/public/views/edit-rules.hbs
@@ -27,10 +27,7 @@
   <div class="container">
     <div class="row wow">
       <div class="col-lg-4 col-md-12 mb-5">
-                  <button class="btn btn-primary" >New Rule</button>
-            
-          
-        
+        <a href="{{baseUrl}}/rule/new" class="btn btn-primary" >New Rule</a>
       </div>
     </div>
   </div>
