--- a/public/views/layouts/admin.hbs
+++ b/public/views/layouts/admin.hbs
@@ -27,6 +27,7 @@
 			<ul class="nav navbar-nav">
 			<li><a href="{{baseUrl}}/email-template">Edit Email Templates</a></li>
 			<li><a href="{{baseUrl}}/rule">Edit Point Rules</a></li>
+			<li><a href="{{baseUrl}}/user/debug-user">Debug User</a></li>
 			</ul>
 		</div>
 	</nav>
