--- a/public/views/ep-dashboard-edit.hbs
+++ b/public/views/ep-dashboard-edit.hbs
@@ -42,26 +42,57 @@
                             style="mso-table-lspace:0pt;mso-table-rspace:0pt;border-collapse:collapse;border-spacing:0px">
                             <tr>
                               <td style="padding:30px;Margin:0">
-{{msg}}
 
-<form method="POST">
-    <input name="firstName" placeholder="First Name" value="{{user.firstName}}"><br>
-    <input name="email"  placeholder="email" value="{{user.email}}"><br>
-    <select name="timezone">
-        {{#each timezones}}
-            <option value="{{this}}" {{isSelected this ../user.timezone}}>{{this}}</option>
-        {{/each}}
-    </select><br>
-    <select name="countryCode">
-        {{#each countryCodes}}
-            <option value="{{@key}}" {{isSelected @key ../user.countryCode}}>{{this}}</option>
-        {{/each}}
-    </select>
-    <br>
-    <button type="submit" class="btn btn-primary" >Update</button>
+
+<form class="form-horizontal" method="POST">
+  <ul>
+    {{#each messages}}
+      <li style="color:red;">{{this}}</li>
+    {{/each}}
+  </ul>
+  <div class="form-group">
+    <label for="inputFirstname" class="col-sm-2 control-label">First Name</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputFirstname" name="firstName" placeholder="First Name" value="{{user.firstName}}">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputEmail" class="col-sm-2 control-label">E-Mail</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="inputEmail" name="email"  placeholder="E-Mail" value="{{user.email}}">
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputTimezone" class="col-sm-2 control-label">Timezone</label>
+    <div class="col-sm-10">
+      <select name="timezone" id="inputTimezone" class="form-control">
+          <option value=""></option>
+          {{#each timezones}}
+              <option value="{{this}}" {{isSelected this ../user.timezone}}>{{this}}</option>
+          {{/each}}
+      </select>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="inputCountryCode" class="col-sm-2 control-label">Country</label>
+    <div class="col-sm-10">
+      <select name="countryCode" id="inputCountryCode" class="form-control">
+          <option value=""></option>
+          {{#each countryCodes}}
+              <option value="{{@key}}" {{isSelected @key ../user.countryCode}}>{{this}}</option>
+          {{/each}}
+      </select>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <a href="/"> &lt; Back </a>
+      |
+      <button type="submit" class="btn btn-primary" >Update</button>
+    </div>
+  </div>
 </form>
 
-<a href="/"> &lt; Back </a>
                               </td>
                             </tr>
                           </table>
