--- a/public/views/layouts/ep-main.hbs
+++ b/public/views/layouts/ep-main.hbs
@@ -30,6 +30,7 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i" rel="stylesheet">
+    <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
     <!--<![endif]-->
     <link href="css/ep-main.css" rel="stylesheet">
     {{#if gtag}}
