--- a/public/views/ep-dashboard-edit.hbs
+++ b/public/views/ep-dashboard-edit.hbs
@@ -1,3 +1,4 @@
+<link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
 <span
   style="display:none !important;font-size:0px;line-height:0;color:#ffffff;visibility:hidden;opacity:0;height:0;width:0;mso-hide:all"></span>
 <div class="es-wrapper-color" style="background-color:#F6F6F6">
