feat: implemented overlay instead of seperate page
- TODO: app controller must be arragned again.
- TODO: post end point must ajax based in order to manage error experience.

--- a/static/css/ep-main.css
+++ b/static/css/ep-main.css
@@ -363,7 +363,9 @@ a[x-apple-data-detectors] {
     height: 30px;
     color: rgb(153 232 36 / 87%);
     background: rgb(23 37 204 / 84%);
-    font-family: 'roboto'
+    font-family: 'roboto';
+    line-height: initial;
+    box-sizing: initial;    
 }
 
 #outlook a {
