--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -372,7 +372,7 @@
                                       style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#ffffff;font-size:14px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif"
                                       href="/unsubscribe/{{user.userid}}">Manage Subscriptions</a></u>  | <u><a
                                       style="-webkit-text-size-adjust:none;-ms-text-size-adjust:none;mso-line-height-rule:exactly;text-decoration:none;color:#ffffff;font-size:14px;font-family:roboto, 'helvetica neue', helvetica, arial, sans-serif"
-                                      href="/user-edit">Settings</a></u>&nbsp;&nbsp;</p>
+                                       data-toggle="modal" data-target="#profileEdit">Profile</a></u>&nbsp;&nbsp;</p>
                               </td>
                             </tr>
                             <!--[if !mso]><!-- -->
@@ -411,4 +411,70 @@
       </td>
     </tr>
   </table>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="profileEdit" tabindex="-1" role="dialog" aria-labelledby="profileEditTitle"
+  aria-hidden="true">
+  <form class="form-horizontal" method="POST" action="/user-edit">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="profileEditTitle">Edit Your Profile</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+
+          <ul>
+            {{#each messages}}
+            <li style="color:red;">{{this}}</li>
+            {{/each}}
+          </ul>
+          <div class="form-group">
+            <label for="inputFirstname" class="col-sm-3 control-label">First Name</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputFirstname" name="firstName" placeholder="First Name"
+                value="{{user.firstName}}">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="inputEmail" class="col-sm-3 control-label">E-Mail</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputEmail" name="email" placeholder="E-Mail"
+                value="{{user.email}}">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="inputTimezone" class="col-sm-3 control-label">Timezone</label>
+            <div class="col-sm-10">
+              <select name="timezone" id="inputTimezone" class="form-control">
+                <option value=""></option>
+                {{#each timezones}}
+                <option value="{{this}}" {{isSelected this ../user.timezone}}>{{this}}</option>
+                {{/each}}
+              </select>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="inputCountryCode" class="col-sm-3 control-label">Country</label>
+            <div class="col-sm-10">
+              <select name="countryCode" id="inputCountryCode" class="form-control">
+                <option value=""></option>
+                {{#each countryCodes}}
+                <option value="{{@key}}" {{isSelected @key ../user.countryCode}}>{{this}}</option>
+                {{/each}}
+              </select>
+            </div>
+          </div>
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+    </div>
+  </form>
 </div>
