feat: jquery validation plugin

--- a/public/views/layouts/ep-main.hbs
+++ b/public/views/layouts/ep-main.hbs
@@ -62,6 +62,7 @@
     <script type="text/javascript" src="{{baseUrl}}/scripts/wow.min.js?ver=1.1.0"></script>
     <script type="text/javascript" src="{{baseUrl}}/scripts/mdb.min.js?ver=1.1.0"></script>
     <script type="text/javascript" src="{{baseUrl}}/scripts/jquery.flip.min.js"></script>
+    <script type="text/javascript" src="{{baseUrl}}/scripts/jquery.validate.min.js"></script>
     <script type="text/javascript" src="{{baseUrl}}/scripts/main.js"></script>
     <script type="text/javascript" src="{{baseUrl}}/scripts/dashboard.js"></script>
 </body>
