--- a/public/views/ep-dashboard.hbs
+++ b/public/views/ep-dashboard.hbs
@@ -426,29 +426,29 @@
 
           <ul id="profileEditMessages" style="color:red;">
           </ul>
-          <div class="form-group">
-            <label for="inputFirstname" class="col-sm-3 control-label">First Name</label>
+          <div class="form-group required">
+            <label for="inputFirstname" class="col-sm-5 control-label">First Name</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="inputFirstname" name="firstName" placeholder="First Name"
                 value="{{#if hasConnectedEPBefore}}{{user.firstName}}{{/if}}">
             </div>
           </div>
-          <div class="form-group">
-            <label for="inputLastname" class="col-sm-3 control-label">Last Name</label>
+          <div class="form-group required">
+            <label for="inputLastname" class="col-sm-5 control-label">Last Name</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="inputLastname" name="lastName" placeholder="Last Name"
                 value="{{#if hasConnectedEPBefore}}{{user.lastName}}{{/if}}">
             </div>
           </div>
-          <div class="form-group">
-            <label for="inputEmail" class="col-sm-3 control-label">E-Mail</label>
+          <div class="form-group required">
+            <label for="inputEmail" class="col-sm-5 control-label">E-Mail</label>
             <div class="col-sm-10">
               <input type="email" class="form-control" id="inputEmail" name="email" placeholder="E-Mail"
                 value="{{#if hasConnectedEPBefore}}{{user.email}}{{/if}}">
             </div>
           </div>
-          <div class="form-group">
-            <label for="inputCountryCode" class="col-sm-3 control-label">Country</label>
+          <div class="form-group required">
+            <label for="inputCountryCode" class="col-sm-5 control-label">Country</label>
             <div class="col-sm-10">
               <select name="countryCode" id="inputCountryCode" class="form-control">
                 <option value=""></option>
@@ -465,8 +465,8 @@
               </select>
             </div>
           </div>
-          <div class="form-group" id="inputPhoneGroup">
-            <label for="inputPhone" class="col-sm-3 control-label">Phone</label>
+          <div class="form-group required" id="inputPhoneGroup">
+            <label for="inputPhone" class="col-sm-5 control-label">Phone</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="inputPhone" name="phone" placeholder="+91xxxxxxxxxx"
                 value="{{phone}}">
@@ -476,6 +476,7 @@
 
         </div>
         <div class="modal-footer">
+          <label class="" style="color:red;">* Required Field</label>
           {{#if hasConnectedEPBefore}}
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           {{/if}}
